--- a/going_subphraseless.ipynb
+++ b/going_subphraseless.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
        "   'P(-2,ls) == card': True}})"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
        "{(688, 689): 'head', (690, 691): 'attrib'}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1860,7 +1860,7 @@
        "{'head': CX defi {688, 689}, 'attrib': CX defi {690, 691}}"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1880,7 +1880,7 @@
        "'attrib'"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,19 +1952,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.000040 beginning analysis...\n",
-      "\t0:00:21.207028\tdone with iter 500/2328\n",
-      "\t0:00:41.176612\tdone with iter 1000/2328\n",
-      "\t0:01:00.280601\tdone with iter 1500/2328\n",
-      "\t0:01:17.249739\tdone with iter 2000/2328\n",
-      "0:01:29.993065\tCOMPLETE\n"
+      "0:00:00.000050 beginning analysis...\n",
+      "\t0:00:24.717497\tdone with iter 500/2328\n",
+      "\t0:00:49.698191\tdone with iter 1000/2328\n",
+      "\t0:01:10.117357\tdone with iter 1500/2328\n",
+      "\t0:01:27.891598\tdone with iter 2000/2328\n"
      ]
     }
    ],
@@ -1994,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,20 +2099,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No explicit link between CX attrib {115232, 115233, 115230, 115231} and CX prep {115228, 115229}\n",
-      "\tattempt connect CX attrib {115232, 115233, 115230, 115231} and CX prep {115228, 115229, 115230}"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dog = list(getcxs(974016))[0]"
+    "testt = list(getcxs(974016))[0]"
    ]
   },
   {
@@ -2248,7 +2238,7 @@
     }
    ],
    "source": [
-    "showmatch(dog)"
+    "showmatch(test)"
    ]
   },
   {
